<resources>
    <string name="app_name">My Inventory</string>

    <string name="input_name_text">Name: </string>
    <string name="input_price_text">Price: </string>
    <string name="input_quantity_text">Quantity: </string>
    <string name="input_category_text">Category: </string>
    <string name="input_ingredients_text">Ingredients: </string>

    <string name="input_select_ingredient_text">Select Ingredient</string>
    <string name="input_select_category_text">Select Category</string>
    <string name="input_add_category_text">Add Category</string>

    <string name="title_activity_add_meal">Add Meal</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_update_item">Update Item</string>
    <string name="title_activity_update_meal">Update Meal</string>
    <string name="done_button_title">Done</string>
    <string name="add_button_text">Add</string>
    <string name="update_button_text">Update</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="new_category_text">New Category</string>

    <string name="not_valid_data_message">Please enter valid data</string>
    <string name="no_ingredients_message">Please select some ingredients</string>
    <string name="no_category_message">Please select a category</string>
    <string name="name_already_exist">That name already exists</string>
    <string name="not_valid_name">Please enter a valid name</string>
    <string name="not_valid_price">Please enter a valid price</string>

    <string name="item_card_price_text">£%1$s</string>

    <string name="saved_items_key">saved_inventory_items</string>
    <string name="saved_meals_key">saved_meals_key</string>
    <string name="saved_categories_key">saved_categories_key</string>
    <string name="save_key">oowyfng89aye89fay98fadsf</string>

    <string name="inventory_items_empty">You don\'t appear to have any items in your inventory.\nPress the plus button to add items.</string>
    <string name="meals_list_empty">You don\'t appear to have any meals.\nPress the plus button to add a meal.</string>

    <string name="create_shopping_list">Create Shopping List</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="delete_selected_items">Delete Selected Items</string>
    <string name="delete_selected_meals">Delete Selected Meals</string>
    <string name="make_meal_of_items">Make meal using items</string>

    <string name="title_activity_meal_list">MealListActivity</string>
    <string name="title_activity_meal_maker">MealMakerActivity</string>
    <string name="drawer_open">Open Navigation Menu</string>
    <string name="drawer_close">Close Navigation Menu</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_settings_option">Settings</string>
    <string name="navigation_drawer_inventory_option">Inventory</string>
    <string name="navigation_drawer_meals_option">Meals</string>

    <string name="delete_items_confirmation">Are you sure you want to delete the selected item(s)?</string>
    <string name="delete_meals_confirmation">Are you sure you want to delete the selected meal(s)?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>

    <string name="no_google_keep">Google Keep is not installed</string>
    <string name="no_shopping_items">There are no items that you need to shop for</string>

    <string name="shopping_list_title">Shopping List %1$s</string>

    <string name="title_activity_settings">Settings</string>

    <string name="clear_data_category_title">Reset Data</string>

    <string name="clear_categories_button_key">clear_categories</string>
    <string name="clear_categories_button_text">Reset Meal Categories</string>
    <string name="clear_categories_summary_text">Clear all the meal categories</string>
    <string name="clear_categories_confirmation_text">Are you sure you want to clear all categories?</string>
    <string name="clear_categories_done_text">Categories cleared</string>

    <string name="clear_meals_button_key">clear_meals</string>
    <string name="clear_meals_button_text">Reset Meals</string>
    <string name="clear_meals_summary_text">Clear all the meals stored</string>
    <string name="clear_meals_confirmation_text">Are you sure you want to clear all meals?</string>
    <string name="clear_meals_done_text">Meals cleared</string>

    <string name="clear_inventory_button_key">clear_inventory</string>
    <string name="clear_inventory_button_text">Reset Inventory</string>
    <string name="clear_inventory_summary_text">Clear all the items stored in the inventory</string>
    <string name="clear_inventory_confirmation_text">Are you sure you want to clear all items?</string>
    <string name="clear_inventory_done_text">Inventory cleared</string>

    <string name="clear_all_button_key">clear_all</string>
    <string name="clear_all_button_text">Reset All</string>
    <string name="clear_all_summary_text">Clear all saved data</string>
    <string name="clear_all_confirmation_text">Are you sure you want to clear everything?</string>
    <string name="clear_all_done_text">All cleared</string>

    <string name="about_category_title">About</string>

    <string name="about_text">Created by Oliver Bell, 2016\nCreated for Coventry University Module A202\nOpen Source</string>



</resources>
