<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/clear_data_category_title">
        <Preference
            android:key="@string/clear_categories_button_key"
            android:title="@string/clear_categories_button_text"
            android:summary="@string/clear_categories_summary_text"
            />

        <Preference
            android:key="@string/clear_meals_button_key"
            android:title="@string/clear_meals_button_text"
            android:summary="@string/clear_meals_summary_text"
            />

        <Preference
            android:key="@string/clear_inventory_button_key"
            android:title="@string/clear_inventory_button_text"
            android:summary="@string/clear_inventory_button_text"
            />

        <Preference
            android:key="@string/clear_all_button_key"
            android:title="@string/clear_all_button_text"
            android:summary="@string/clear_all_summary_text"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_category_title">
        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/about_text"/>
    </PreferenceCategory>
</PreferenceScreen>
